bugfixed line breaks in edited messages

--- a/src/app/mainsection/channel/channel-messages/message/message.component.scss
+++ b/src/app/mainsection/channel/channel-messages/message/message.component.scss
@@ -23,7 +23,7 @@
     height: 1px;
     background-color: $light-purple;
 
-    > span {
+    >span {
         font-size: 18px;
         padding: 5px 15px;
         text-wrap: nowrap;
@@ -89,7 +89,7 @@
     width: 70px;
     @include dFlex();
 
-    > img {
+    >img {
         border-radius: 50%;
         max-width: 70px;
     }
@@ -104,7 +104,7 @@
     @include dFlex();
     gap: 20px;
 
-    > span {
+    >span {
         cursor: pointer;
         font-size: 18px;
         font-weight: 700;
@@ -124,8 +124,9 @@
     @include dFlex();
     background-color: $bg-color;
     border-radius: 0px 20px 20px 20px;
+    white-space: pre-line;
 
-    > span {
+    >span {
         padding: 15px;
     }
 }
@@ -221,7 +222,7 @@
     font-weight: 500;
     text-wrap: nowrap;
 
-    > span {
+    >span {
         cursor: pointer;
 
         &:hover {
@@ -249,7 +250,7 @@
     font-weight: 500;
     text-wrap: nowrap;
 
-    > span {
+    >span {
         cursor: pointer;
 
         &:hover {
@@ -281,7 +282,7 @@
 .edit-message {
     position: relative;
 
-    > textarea {
+    >textarea {
         min-width: 356px;
         min-height: 88px;
         height: fit-content;
@@ -298,7 +299,7 @@
 .edit-message-inverted {
     position: relative;
 
-    > textarea {
+    >textarea {
         min-width: 356px;
         min-height: 88px;
         height: fit-content;
@@ -317,7 +318,7 @@
     @include dFlex($jc: space-between);
     padding: 15px;
 
-    > button {
+    >button {
         font-size: 16px;
         cursor: pointer;
         background-color: $purple1;
@@ -333,7 +334,7 @@
 }
 
 .selected-emoji {
-    > span {
+    >span {
         cursor: pointer;
         background-color: white;
         border: 1px solid $light-purple;
@@ -392,20 +393,25 @@
     .divider-container {
         padding: 20px 24px;
     }
+
     .single-message-container {
         padding: 28px 24px;
     }
+
     .profile-picture {
         width: 50px;
         height: 50px;
+
         img {
             max-width: 50px;
         }
     }
+
     .message-wrapper {
         margin-top: 0;
         margin-left: 16px;
     }
+
     .inverted-message {
         .message-wrapper {
             margin-right: 16px;
@@ -416,10 +422,12 @@
 @media screen and (max-width: 480px) {
     .divider-container {
         padding: 20px 16px;
+
         span {
             font-size: 16px;
         }
     }
+
     .single-message-container {
         padding: 24px 16px;
     }
